<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/myGrey"
    tools:context="signup.fragments.SignUpFragment"
    >

    <TextView
        android:layout_marginHorizontal="10dp"
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/signup"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/myBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <View
        android:id="@+id/divider"
        android:layout_marginHorizontal="10dp"
        android:layout_width="70dp"
        android:layout_height="4dp"
        android:background="@color/myPink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_signup"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_marginHorizontal="10dp"
        android:id="@+id/editText_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:hint="@string/firstName"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <EditText
        android:id="@+id/editText_lastName"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/lastName"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="15dp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_firstName" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edittext"
        android:hint="@string/email"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_lastName" />

    <EditText
        android:id="@+id/editText_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_edittext"
        android:layout_marginHorizontal="10dp"
        android:hint="@string/password"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:padding="15dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/myBlue"
        android:textColor="#FFFFFF"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/editText_phoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/textView_signedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/signedin"
            android:textSize="16sp"
            android:textColor="@color/myPink" />

        <TextView
            android:id="@+id/textView_loggin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textSize="16sp"
            android:textColor="@color/myBlue"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>